Update CORS Security
Updated CORS Security to use Arrays.asList() rather than List.of().