@@ -1,5 +1,6 @@
 package com.revature.security.util;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -36,9 +37,9 @@ public class SecurityConfigurer extends WebSecurityConfigurerAdapter {
     protected void configure(HttpSecurity http) throws Exception {
         http.cors().configurationSource(request -> {
             CorsConfiguration cors = new CorsConfiguration();
-            cors.setAllowedOrigins(List.of("*"));
-            cors.setAllowedMethods(List.of("*"));
-            cors.setAllowedHeaders(List.of("*"));
+            cors.setAllowedOrigins(Arrays.asList("*"));
+            cors.setAllowedMethods(Arrays.asList("*"));
+            cors.setAllowedHeaders(Arrays.asList("*"));
             return cors;
         });
         http.csrf().disable().authorizeRequests()
